Archive2/14/e8b429d8871dee/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <vector> 
   ^
main.cpp:13:31: error: empty character constant
         std :: cout  << n <<  '' ; 
                               ^
main.cpp: In function 'int principale()':
main.cpp:8:5: error: 'vecteur' is not a member of 'std'
     std :: vecteur < int > v { 1 , 2 , 3 , 4 , 5 } ; 
     ^
main.cpp:8:22: error: expected primary-expression before 'int'
     std :: vecteur < int > v { 1 , 2 , 3 , 4 , 5 } ; 
                      ^
main.cpp:8:22: error: expected ';' before 'int'
main.cpp:10:5: error: 'copie' is not a member of 'std'
     std :: copie ( v commencer ( ) , v fin ( ) ,
     ^
main.cpp:10:20: error: 'v' was not declared in this scope
     std :: copie ( v commencer ( ) , v fin ( ) ,
                    ^
main.cpp:10:40: error: expected ')' before 'fin'
     std :: copie ( v commencer ( ) , v fin ( ) ,
                                        ^
main.cpp:11:79: error: expected primary-expression before '/' token
               std :: front_insert_iterator < std :: deque < int >> ( d ) ) ;  / / ou std :: front_inserter (d) 
                                                                               ^
main.cpp:11:81: error: expected primary-expression before '/' token
               std :: front_insert_iterator < std :: deque < int >> ( d ) ) ;  / / ou std :: front_inserter (d) 
                                                                                 ^
main.cpp:11:83: error: 'ou' was not declared in this scope
               std :: front_insert_iterator < std :: deque < int >> ( d ) ) ;  / / ou std :: front_inserter (d) 
                                                                                   ^
main.cpp:11:86: error: expected ';' before 'std'
               std :: front_insert_iterator < std :: deque < int >> ( d ) ) ;  / / ou std :: front_inserter (d) 
                                                                                      ^
main.cpp:14:22: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  " \ n " ; 
                      ^
main.cpp:15:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
